--- a/src/styles.css
+++ b/src/styles.css
@@ -92,6 +92,12 @@ footer {
     margin-top: 10px;
 }
 
+.profileImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+}
+
 /* Profile Page */
 
 .profileForm {
