--- a/src/styles.css
+++ b/src/styles.css
@@ -11,11 +11,17 @@ input {
 }
 
 body {
-  background-color: black;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
   color: white;
+  background: url("https://images.pexels.com/photos/1417647/pexels-photo-1417647.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260")
+  no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow: overlay;
 }
 
 button {
@@ -30,6 +36,24 @@ a {
 
 form {
   width: 100%;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb{
+  background: rgba(0, 0, 0, 0.8);
+  border-radius: 10px;
+  transition: .2 linear;
+}
+::-webkit-scrollbar-thumb:hover{
+  transition: .2 linear;
+}
+::-webkit-scrollbar-thumb:active {
+  transition: .2 linear;
 }
 
 .sweet-input::placeholder {
@@ -112,7 +136,7 @@ footer {
   margin-top: 50px;
 }
 
-/* Nwitter Factory */
+/* Switter Factory */
 
 .factoryForm {
   display: flex;
@@ -134,18 +158,32 @@ footer {
 .factoryInput__input {
   flex-grow: 1;
   height: 40px;
-  padding: 0px 20px;
+  padding: 0px 50px 0 20px;
   color: white;
-  border: 1px solid #04aaff;
+  border: 1px solid rgba(0, 0, 0, 0.8);
   border-radius: 20px;
   font-weight: 500;
   font-size: 12px;
+  transition: background linear 0.2s, color linear 0.2s;
+}
+
+.factoryInput__input::placeholder {
+  color: white;
+}
+
+.factoryInput__input:focus {
+  color: rgba(0, 0, 0, 0.8);
+  backdrop-filter: saturate(200%) blur(5px);
+  background-color: rgba(255, 255, 255, 0.6);
+}
+.factoryInput__input:focus::placeholder {
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .factoryInput__arrow {
   position: absolute;
   right: 0;
-  background-color: #04aaff;
+  background-color: rgba(0, 0, 0, 0.8);
   height: 40px;
   width: 40px;
   padding: 10px 0px;
@@ -188,7 +226,7 @@ footer {
   font-size: 12px;
 }
 
-/* Nweet */
+/* Sweet */
 
 .sweetEdit .formBtn {
   cursor: pointer;
@@ -197,30 +235,31 @@ footer {
 }
 
 .sweet {
-  margin-bottom: 20px;
-  background-color: white;
+  margin-bottom: 30px;
   width: 100%;
   max-width: 320px;
-  padding: 20px;
-  border-radius: 10px;
   position: relative;
   display: flex;
   flex-direction: column;
   color: rgba(0, 0, 0, 0.8);
 }
 
-.sweet h4 {
+.sweetContent {
+  position: relative;
+}
+
+.sweet p {
   font-size: 14px;
+  backdrop-filter: saturate(200%) blur(5px);
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 35px 20px 30px;
+  border-radius: 10px;
 }
 
 .sweet img {
-  right: -10px;
-  top: 20px;
-  position: absolute;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  margin-top: 10px;
+  width: 320px;
+  height: 320px;
+  border-radius: 10px 10px 0 0;
 }
 
 .sweet__actions {
